--- a/api-reference/go-live-checklist.mdx
+++ b/api-reference/go-live-checklist.mdx
@@ -1,28 +1,103 @@
 ---
-title: 'Проверка интеграции'
-description: ' '
+title: "Проверка интеграции"
+description: "Чеклист для проверки готовности интеграции к продакшену"
 sidebarTitle: "5. Проверка интеграции"
 ---
 
+Перед запуском интеграции в продакшн убедитесь, что все пункты этого чеклиста выполнены.
 
- 
+## Обязательные проверки
 
-- **Передача параметров**:
-  - Статистика пользователя.
-  - Информация о KYC
-  - Альтернативные суммы платежа 
-- **Обработка ошибок**:
-  - `MAINTENANCE`и `FAST_DECLINE`
-  - `INSUFFICIENT_FUNDS` нехватка средств (не считать ошибкой)
-- **Идемпотентность операций** (избежать двойных начислений)
-- **Обработка колбеков**: 
-  - Проверка подписи
-- **Сопоставление идентификаторов:**
-  - client_operation_id соответствует идентификаторам оператора, с которыми обращаются в поддержку
-  - reference_id сохраняется на стороне оператора
-- **Подтверждение обработки операции**
-- **Интервальный запрос неподтверждённых успешных операций**
-- **Работа с возвратами**
-- **Корректировка статусов**
-- **Сверка**
+<Steps>
+  <Step title="Передача параметров">
+    Убедитесь, что передаются все необходимые параметры:
+    - Статистика пользователя (если требуется)
+    - Информация о KYC (если требуется)
+    - Альтернативные суммы платежа (если поддерживаются)
+  </Step>
+  
+  <Step title="Обработка ошибок">
+    Реализована корректная обработка всех типов ошибок:
+    - `MAINTENANCE` — техническое обслуживание
+    - `FAST_DECLINE` — быстрый отказ
+    - `INSUFFICIENT_FUNDS` — недостаточно средств (не считается ошибкой, это нормальный статус)
+  </Step>
+  
+  <Step title="Идемпотентность операций">
+    Реализована защита от двойных начислений:
+    - Проверка уникальности `client_operation_id`
+    - Проверка статуса операции перед зачислением средств
+    - Использование транзакций БД для атомарности операций
+  </Step>
+  
+  <Step title="Обработка колбеков">
+    Реализована корректная обработка обратных уведомлений:
+    - Проверка подписи RSA-SHA256 и/или ECDSA-SHA256
+    - Проверка IP-адресов отправителя
+    - Возврат корректных HTTP статусов (200 или 204)
+    - Идемпотентная обработка уведомлений
+  </Step>
+  
+  <Step title="Сопоставление идентификаторов">
+    Обеспечена корректная работа с идентификаторами:
+    - `client_operation_id` соответствует идентификаторам в вашей системе
+    - `reference_id` сохраняется на стороне проекта для связи с операциями
+    - Реализована возможность поиска операций по обоим идентификаторам
+  </Step>
+  
+  <Step title="Подтверждение обработки операции">
+    Реализовано подтверждение успешной обработки операций:
+    - Вызов метода подтверждения после зачисления средств
+    - Обработка ошибок при подтверждении
+    - Логирование всех попыток подтверждения
+  </Step>
+  
+  <Step title="Интервальный запрос неподтверждённых операций">
+    Настроен периодический запрос неподтверждённых успешных операций:
+    - Регулярный опрос (рекомендуется каждые 5-10 минут)
+    - Обработка массива операций
+    - Подтверждение каждой обработанной операции
+  </Step>
+  
+  <Step title="Работа с возвратами">
+    Реализована поддержка возвратов (refunds):
+    - Обработка запросов на возврат
+    - Обновление статусов операций
+    - Уведомление пользователей о возвратах
+  </Step>
+  
+  <Step title="Корректировка статусов">
+    Реализована возможность корректировки статусов операций:
+    - Обработка изменений статусов от Finmar API
+    - Синхронизация статусов в вашей системе
+  </Step>
+  
+  <Step title="Сверка операций">
+    Настроена система сверки операций:
+    - Периодическая сверка с Finmar API
+    - Выявление расхождений
+    - Автоматическое или ручное разрешение расхождений
+  </Step>
+</Steps>
+
+## Дополнительные рекомендации
+
+<CardGroup cols={2}>
+  <Card title="Логирование" icon="file-lines">
+    Настройте подробное логирование всех операций для отладки и аудита
+  </Card>
+  <Card title="Мониторинг" icon="chart-line">
+    Настройте мониторинг успешности операций и обработки колбеков
+  </Card>
+  <Card title="Тестирование" icon="flask">
+    Проведите полное тестирование всех сценариев в sandbox окружении
+  </Card>
+  <Card title="Документация" icon="book">
+    Подготовьте внутреннюю документацию по интеграции для вашей команды
+  </Card>
+</CardGroup>
+
+<Warning>
+  Не запускайте интеграцию в продакшн до полного выполнения всех обязательных проверок.
+</Warning>
  
