--- a/api-reference/integration/callbacks.mdx
+++ b/api-reference/integration/callbacks.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Обратные уведомления"
-description: ""
+description: "Обработка обратных уведомлений от Finmar API с проверкой подписи"
 sidebarTitle: "3. Обратные уведомления"
 ---
 
@@ -68,7 +68,10 @@ sidebarTitle: "3. Обратные уведомления"
   2. берется `body` - бинарное представление **сериализованного тела** HTTP сообщения в кодировке `UTF-8` - то что получено по сети, до десериализации
   3. значение `X-ECDSA-SHA256-SIGN` преобразуется из `base64` в бинарное представление `sign`
   4. выполняется проверка подписи `sign` для сообщения `body` с помощью `ECDSA` с алгоритмом хеширования `SHA256` и форматом подписи `IETF RFC 3279`
-  5. сообщение считается аутентифицированным если проверка подписи прошла успешноПримеры обработчиков обратных уведомлений
+      5. сообщение считается аутентифицированным если проверка подписи прошла успешно
+</Expandable>
+
+#### Примеры обработчиков обратных уведомлений
 </Expandable>
 
 #### Примеры реализации обработчиков обратных уведомлений с проверкой подписи
