--- a/api-reference/integration/client_confirm_payment.mdx
+++ b/api-reference/integration/client_confirm_payment.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Подтверждение операции"
-description: " "
+description: "Подтверждение успешной обработки платёжной операции"
 sidebarTitle: "4. Подтверждение обработки операции"
 ---
  
