--- a/api-reference/integration/redirect_to_url.mdx
+++ b/api-reference/integration/redirect_to_url.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Перенаправление пользователя на платёжную страницу"
-description: " "
+description: "Способы перенаправления пользователя на платёжную страницу"
 sidebarTitle: "2. Перенаправление пользователя"
 ---
 
