--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,19 +1,63 @@
 ---
 title: "Введение"
-description: " "
+description: "Введение в интеграцию с Finmar API для приёма платежей"
 sidebarTitle: "Введение"
 ---
- 
+
+Finmar предоставляет набор API для обработки платежей и управления ими. API принимает и возвращает данные в формате JSON в теле HTTP-запроса и использует стандартные HTTP-коды ответов. Вы можете работать с API напрямую, используя любую предпочтительную HTTP/REST-библиотеку.
+
 <Note>
-  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
+  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции: https://t.me/integrationVimapay
 </Note>
 
+## Приём платежей
+
+Finmar API поддерживает различные методы оплаты:
+
+- **Банковские карты** (HPP и H2H)
+- **Open Banking** — прямые переводы со счёта
+- **Apple Pay** — оплата через Apple устройства
+- **Google Pay** — оплата через Google сервисы
+- **BLIK** — мобильные платежи
+- **Widget Integration** — криптозеркалирование
+- **Криптогейт** — приём и выплаты в криптовалютах
 
 ## Аутентификация
-Basic Стандартная Basic HTTP authentication scheme (RFC 7617), дополнительная проверка подлинности отправителя запроса не выполняется - учетные данные полностью передаются в запросе. Эта схема предназначена для ускорения процесса интеграции.
-Для клиента создается пара key + password, которые он передает в заголовке `Authorization`:
+
+Для аутентификации используется стандартная схема Basic HTTP Authentication (RFC 7617). Учётные данные передаются в заголовке `Authorization` в формате Base64.
+
+### Формат заголовка
 
 ```
 Authorization: Basic base64(key:password)
 ```
+
+### Пример
+
+```bash
+curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
+  --header 'Authorization: Basic cGxheWJybzptcTRWIWllNXFYaEE='
+```
+
+<Info>
+  Для каждого проекта создаётся уникальная пара key + password. Учётные данные для тестового и продакшн окружений различаются.
+</Info>
+
+## Базовый URL
+
+### Тестовое окружение (Sandbox)
+
+```
+https://sandbox.finmar.tech
+```
+
+### Продакшн окружение
+
+```
+https://finmar.tech
+```
+
+<Warning>
+  Не используйте продакшн учётные данные в тестовом окружении и наоборот.
+</Warning>
  
