--- a/api-reference/status.mdx
+++ b/api-reference/status.mdx
@@ -1,11 +1,8 @@
 ---
 title: "Статусная модель"
-description: " "
+description: "Описание статусов платёжных операций"
 ---
 
 import Status from '/snippets/status.mdx';
-
-
-### {$title}
 
 <Status/>
