--- a/index.mdx
+++ b/index.mdx
@@ -9,25 +9,22 @@ description: "Документация по интеграции Finmar API"
 
 ## Фиатные платежи
 
+Приём платежей банковскими картами и альтернативными методами оплаты.
+
 <CardGroup cols={2}>
-  <Card title="Банковские карты" icon="credit-card" horizontal href="products/card">
-    
+  <Card title="Банковские карты" icon="credit-card" horizontal href="/products/card">
+    Приём оплаты банковскими картами через Hosted Payment Page (HPP) или Host-to-Host (H2H)
   </Card>
-    <Card title="Openbanking" icon="money-bill-transfer" horizontal href="/products/openbanking">
-    
+  <Card title="Openbanking" icon="money-bill-transfer" horizontal href="/products/openbanking">
+    Прямые переводы со счёта пользователя через Open Banking
   </Card>
   <Card title="Widget Integration" icon="dumpster-fire" horizontal href="/products/widget">
-    
+    Платежное решение для приема платежей с криптозеркалированием
   </Card>
-
   <Card title="Apple Pay" icon="cc-apple-pay" horizontal href="/products/applepay">
-    
+    Приём оплаты через Apple Pay для устройств Apple
   </Card>
   <Card title="Google Pay" icon="google-pay" horizontal href="/products/googlepay">
-    
-  </Card>
- 
-    <Card title="Openbanking" icon="money-bill-transfer" horizontal href="/products/openbanking">
-    
+    Приём оплаты через Google Pay для Android и веб-приложений
   </Card>
 </CardGroup>
