--- a/products/applepay.mdx
+++ b/products/applepay.mdx
@@ -1,13 +1,15 @@
 ---
 title: "Apple Pay"
 icon: "cc-apple-pay"
-description: " "
+description: "Приём оплаты через Apple Pay"
 mode: "frame"
 ---
 
 
  
  
+Apple Pay — это безопасный способ оплаты для пользователей устройств Apple. Интеграция позволяет принимать платежи через Apple Pay с использованием Touch ID, Face ID или пароля.
+
 ## Общая схема работы
 
 ```mermaid
@@ -16,19 +18,43 @@ sequenceDiagram
     actor Клиент
     participant Проект
     participant Finmar API
-    Клиент->>Проект: Выбор платежного метода
+    Клиент->>Проект: Выбор платежного метода Apple Pay
     Проект->>Finmar API: Передача данных для создания операции
     Finmar API-->>Проект: Возврат URL платежной страницы
     Проект->>Клиент: Перенаправление на URL платежной страницы
+    Клиент->>Finmar API: Подтверждение оплаты через Apple Pay
     Finmar API->>Проект: Уведомление<br>о завершении операции
     Проект->>Проект: Обработка уведомления
     Проект->>Finmar API: Подтверждение обработки операции
 ```
+
+<Steps>
+  <Step title="Создание операции">
+    Ваш сервер отправляет запрос в Finmar API для создания операции с методом оплаты `applepay`.
+  </Step>
+  <Step title="Получение URL платёжной страницы">
+    Finmar API возвращает уникальный URL платёжной страницы с поддержкой Apple Pay.
+  </Step>
+  <Step title="Перенаправление пользователя">
+    Пользователь перенаправляется на платёжную страницу, где может выбрать Apple Pay в качестве метода оплаты.
+  </Step>
+  <Step title="Обработка платежа">
+    Пользователь подтверждает оплату через Apple Pay, используя Touch ID, Face ID или пароль.
+  </Step>
+  <Step title="Получение уведомления">
+    Finmar API отправляет уведомление на ваш сервер о статусе операции.
+  </Step>
+  <Step title="Подтверждение обработки">
+    После успешной обработки операции ваш сервер подтверждает получение уведомления.
+  </Step>
+</Steps>
+
 <Note>
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
 
- <CardGroup cols={2}>
-   <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+<CardGroup cols={1}>
+  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/integration/checkout">
+    Подробная информация о создании операций и параметрах запроса
   </Card>  
-   </CardGroup>
+</CardGroup>
