--- a/products/blik.mdx
+++ b/products/blik.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Blik'
-description: ' '
-icon: 'mobile-button'
+title: "BLIK"
+description: "Приём оплаты через BLIK"
+icon: "mobile-button"
 mode: "frame"
 ---
  
@@ -27,6 +27,11 @@ sequenceDiagram
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
 
- <CardGroup cols={1}>
-   <Card title="Документация по интеграции" icon="book" horizontal href="api-reference/integration/"> </Card>  
-  </CardGroup>
+<Note>
+  Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
+</Note>
+
+<CardGroup cols={1}>
+  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+  </Card>  
+</CardGroup>
