--- a/products/card.mdx
+++ b/products/card.mdx
@@ -6,8 +6,6 @@ mode: "frame"
 ---
 import TestCards from '/snippets/test-cards.mdx';
 
- 
-
 ## Общая схема работы
 
 ```mermaid
@@ -73,16 +71,16 @@ autonumber
     После завершения платежа платёжный провайдер перенаправляет пользователя обратно на ваш сайт по заранее определённым URL-адресам (`url_success` или `url_result`).
   </Step>
   <Step title="Обратное уведомление">
-    API Finmart отправляет уведомление на ваш сервер о статусе операции. Ваш сервер обрабатывает эту информацию
+    API Finmart отправляет уведомление на ваш сервер о статусе операции через указанный `url_callback`.
   </Step>
   <Step title="Обработка операции (зачисление средств пользователю)">
-    API Finmart отправляет уведомление на ваш сервер о статусе операции. Ваш сервер обрабатывает эту информацию, а затем подтверждает получение уведомления, отправляя запрос `POST /api/operation/set_ack_id` в Finmart.
+    Ваш сервер обрабатывает полученное уведомление, проверяет подпись, зачисляет средства пользователю и подтверждает получение уведомления, отправляя запрос `POST /api/operation/set_ack_id` в Finmart.
   </Step>
   <Step title="Подтверждение операции">
-    После успешной обработки операции (зачислению средств пользователю), ваш сервер API Finmart отправляет уведомление на ваш сервер о статусе операции. Ваш сервер обрабатывает эту информацию, а затем подтверждает получение уведомления, отправляя запрос `POST /api/operation/set_ack_id` в Finmart.
+    После успешной обработки операции (зачисления средств пользователю) ваш сервер подтверждает обработку операции, отправляя запрос на подтверждение в Finmart API.
   </Step>
   <Step title="Обработка новых успешных операций (цикл)">
-    Ваш сервер периодически запрашивает у Finmart список неподтверждённых успешных операций (`GET /v3/operation/unconfirmed`). После получения и обработки этих операций, ваш сервер сообщает Finmart об успешной обработке (`POST /api/v3/operation/confirm`), обновляет баланс пользователя на вашем сайте и снова устанавливает `operation_ack_id` (`POST /api/operation/set_ack_id`) для предотвращения дублирования. Этот цикл повторяется для обработки всех новых успешных операций.
+    Ваш сервер периодически запрашивает у Finmart список неподтверждённых успешных операций (`GET /collector/api/v3/client_unconfirmed_success_payments`). После получения и обработки этих операций ваш сервер подтверждает обработку каждой операции, обновляет баланс пользователя на вашем сайте и снова устанавливает `operation_ack_id` для предотвращения дублирования. Этот цикл повторяется для обработки всех новых успешных операций.
   </Step>
 </Steps>
  
@@ -92,8 +90,9 @@ autonumber
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
 
- <CardGroup cols={1}>
-   <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+<CardGroup cols={1}>
+  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+    Подробная информация о создании операций, обработке уведомлений и подтверждении платежей
   </Card>  
 </CardGroup>
 
