--- a/products/cryptogate/pay-out.mdx
+++ b/products/cryptogate/pay-out.mdx
@@ -4,6 +4,31 @@ icon: "link"
 description: "Выплаты в криптовалютах"
 ---
 
-## {{title}}
+## Общая схема работы
 
-Тыры-пыры выплаты
+<Steps>
+  <Step title="Создание операции на выплату">
+    Проект отправляет запрос в Finmar API для создания операции на выплату криптовалюты пользователю.
+  </Step>
+  <Step title="Получение адреса для выплаты">
+    Пользователь предоставляет адрес криптокошелька для получения выплаты.
+  </Step>
+  <Step title="Обработка выплаты">
+    Finmar API обрабатывает запрос на выплату и отправляет криптовалюту на указанный адрес.
+  </Step>
+  <Step title="Уведомление о статусе">
+    Finmar API отправляет уведомление на ваш сервер о статусе операции выплаты.
+  </Step>
+  <Step title="Подтверждение обработки">
+    После успешной обработки операции проект подтверждает получение уведомления.
+  </Step>
+</Steps>
+
+<Warning>
+  Детальная документация по выплатам находится в разработке. Для получения актуальной информации обратитесь к менеджеру по интеграции.
+</Warning>
+
+<CardGroup cols={1}>
+  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+  </Card>  
+</CardGroup>
