--- a/products/googlepay.mdx
+++ b/products/googlepay.mdx
@@ -1,12 +1,14 @@
 ---
-title: 'Google Pay'
-description: ' '
+title: "Google Pay"
+description: "Приём оплаты через Google Pay"
 icon: "google-pay"
 mode: "frame"
 ---
 
  
  
+Google Pay — это быстрый и безопасный способ оплаты для пользователей Android и веб-приложений. Интеграция позволяет принимать платежи через Google Pay с минимальными усилиями.
+
 ## Общая схема работы
 
 ```mermaid
@@ -15,19 +17,43 @@ sequenceDiagram
     actor Клиент
     participant Проект
     participant Finmar API
-    Клиент->>Проект: Выбор платежного метода
+    Клиент->>Проект: Выбор платежного метода Google Pay
     Проект->>Finmar API: Передача данных для создания операции
     Finmar API-->>Проект: Возврат URL платежной страницы
     Проект->>Клиент: Перенаправление на URL платежной страницы
+    Клиент->>Finmar API: Подтверждение оплаты через Google Pay
     Finmar API->>Проект: Уведомление<br>о завершении операции
     Проект->>Проект: Обработка уведомления
     Проект->>Finmar API: Подтверждение обработки операции
 ```
- <Note>
+
+<Steps>
+  <Step title="Создание операции">
+    Ваш сервер отправляет запрос в Finmar API для создания операции с методом оплаты `googlepay`.
+  </Step>
+  <Step title="Получение URL платёжной страницы">
+    Finmar API возвращает уникальный URL платёжной страницы с поддержкой Google Pay.
+  </Step>
+  <Step title="Перенаправление пользователя">
+    Пользователь перенаправляется на платёжную страницу, где может выбрать Google Pay в качестве метода оплаты.
+  </Step>
+  <Step title="Обработка платежа">
+    Пользователь подтверждает оплату через Google Pay, используя сохранённые данные карты.
+  </Step>
+  <Step title="Получение уведомления">
+    Finmar API отправляет уведомление на ваш сервер о статусе операции.
+  </Step>
+  <Step title="Подтверждение обработки">
+    После успешной обработки операции ваш сервер подтверждает получение уведомления.
+  </Step>
+</Steps>
+
+<Note>
   Перед началом интеграции запросите имя пользователя и пароль для тестового окружения в чате интеграции
 </Note>
 
- <CardGroup cols={1}>
-   <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
+<CardGroup cols={1}>
+  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/integration/checkout">
+    Подробная информация о создании операций и параметрах запроса
   </Card>  
-  </CardGroup>
+</CardGroup>
