--- a/requirements.mdx
+++ b/requirements.mdx
@@ -1,15 +1,71 @@
 ---
-title: 'Требования к проектам'
-description: 'Данные, необходимые для начала работ и требования к сайту'
-tag: "SOON"
+title: "Требования к проектам"
+description: "Данные, необходимые для начала работ и требования к сайту"
 ---
 
- 
- 
-<img
-  style={{ borderRadius: '0.5rem',width: '200px' }}
-  src="/images/writer.svg"
-/>
+## Необходимые данные для начала интеграции
 
-Скоро здесь будет текст...
+Для начала работы с Finmar API вам потребуются следующие данные:
 
+<Steps>
+  <Step title="Учётные данные для тестового окружения">
+    Получите имя пользователя и пароль для доступа к sandbox окружению. Обратитесь к менеджеру по интеграции в Telegram: https://t.me/integrationVimapay
+  </Step>
+  <Step title="Учётные данные для продакшн окружения">
+    После успешного тестирования интеграции запросите учётные данные для production окружения.
+  </Step>
+  <Step title="URL для обратных уведомлений">
+    Подготовьте публично доступные URL-адреса для получения обратных уведомлений (callbacks) от Finmar API.
+  </Step>
+  <Step title="URL для перенаправления пользователей">
+    Определите URL-адреса для перенаправления пользователей после успешной или неуспешной оплаты.
+  </Step>
+</Steps>
+
+## Требования к сайту
+
+### Доступность URL для callbacks
+
+Ваш сервер должен быть доступен для приёма POST-запросов от Finmar API по следующим IP-адресам:
+
+```
+134.122.55.160
+141.95.16.27
+163.172.116.59
+```
+
+<Warning>
+  Убедитесь, что ваш сервер не блокирует запросы с этих IP-адресов. Рекомендуется настроить whitelist для дополнительной безопасности.
+</Warning>
+
+### HTTPS
+
+Все URL для callbacks и перенаправлений должны использовать протокол HTTPS.
+
+<Info>
+  Для тестового окружения допускается использование HTTP, но для продакшена обязателен HTTPS.
+</Info>
+
+### Обработка уведомлений
+
+Ваш сервер должен:
+
+- Принимать POST-запросы с Content-Type: application/json
+- Проверять подпись уведомлений (RSA-SHA256 и/или ECDSA-SHA256)
+- Возвращать HTTP статус 200 или 204 при успешной обработке
+- Обрабатывать уведомления идемпотентно (избегать двойных начислений)
+
+### Идемпотентность операций
+
+Используйте уникальный `client_operation_id` для каждой операции. Это позволит избежать дублирования операций при повторных запросах.
+
+## Дополнительная информация
+
+<CardGroup cols={2}>
+  <Card title="Документация по интеграции" icon="book" href="/api-reference/introduction">
+    Начните с введения в API
+  </Card>
+  <Card title="Менеджер по интеграции" icon="message" href="https://t.me/integrationVimapay">
+    Получите помощь в настройке интеграции
+  </Card>
+</CardGroup>
